--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -12,12 +12,12 @@
     <h1>Licenciatura en TC</h1>
     <h2>Aceptados</h2>
     <ol>
-        <li>S20201918</li>
-        <li>S20201943</li>
-        <li>S20201944</li>
-        <li>S20201923</li>
-        <li>S20201999</li>
-        <li>S20201998</li>
+        <li><a href="ejemplo.html">S20201918</a></li>
+        <li><a href="ejemplo.html">S20201943</a></li>
+        <li><a href="ejemplo.html">S20201944</a></li>
+        <li><a href="ejemplo.html">S20201923</a></li>
+        <li><a href="ejemplo.html">S20201999</a></li>
+        <li><a href="ejemplo.html">S20201998</a></li>
     </ol>
     <h2>Rechazados</h2>
     <ol>
