--- a/ejemplo.html
+++ b/ejemplo.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista</title>
+    <link rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
-    <h1>Titulo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur cum iure laudantium facere quis ad!
-        Voluptatibus sequi placeat nostrum ratione, quasi tempora amet at accusantium beatae, voluptas corrupti fugit
-        esse.</p>
-    <h2>Titulo</h2>
-    <!--Comentario-->
-    <h3>Titulo</h3>
+    <h1>Proceso de Inscripcion</h1>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sapiente in inventore et necessitatibus! Natus vero nesciunt sint aliquid quasi itaque sed quibusdam deleniti laboriosam quia. Quia similique dolorum saepe?</li>
+        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit veniam accusamus delectus eaque omnis quibusdam perspiciatis, quis saepe ex totam repudiandae id obcaecati quo non harum praesentium placeat voluptatum voluptate.</li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel nihil blanditiis molestiae exercitationem odio at, magnam, assumenda deleniti quibusdam amet, labore esse est fuga. Voluptatem, sapiente? At harum veniam commodi!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates enim ipsa assumenda inventore et blanditiis asperiores, obcaecati recusandae praesentium ea quia amet debitis pariatur cupiditate voluptate laborum cum, facilis ullam!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum consequuntur aliquid nesciunt fuga sequi animi, maiores odio nisi, excepturi, et laborum eligendi est cupiditate dolores fugit. Quas quos molestias ad.r</li>
+        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam consectetur saepe nihil ullam nisi voluptatem temporibus quaerat consequatur debitis. Alias, sit cupiditate? Cumque laboriosam ullam aliquid sed. Eaque, quae accusantium.</li>
+    </ul>
+    <a href="http://127.0.0.1:5500/ejemplo2.html">voluptatem
 </body>
 
 </html>
