--- a/ejemplo.html
+++ b/ejemplo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
+    <script src="main.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,6 @@
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum consequuntur aliquid nesciunt fuga sequi animi, maiores odio nisi, excepturi, et laborum eligendi est cupiditate dolores fugit. Quas quos molestias ad.r</li>
         <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam consectetur saepe nihil ullam nisi voluptatem temporibus quaerat consequatur debitis. Alias, sit cupiditate? Cumque laboriosam ullam aliquid sed. Eaque, quae accusantium.</li>
     </ul>
-    <a href="http://127.0.0.1:5500/ejemplo2.html">voluptatem
+    <a href="ejemplo2.html">volver</a> 
 </body>
-
 </html>
