--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <!-- columna -->
             <div class="col-md-12"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sunt sint fuga omnis mollitia ipsa architecto quibusdam harum nisi, reiciendis, ipsam similique, minima corporis consectetur! Iusto ea praesentium aliquid blanditiis?</p>
-            <a href="" class="btn btn-primary">Enlace 1</a>
-            <a href="" class="btn btn-danger">Enlace 2</a>
+            <a href="ejemplo2.html" class="btn btn-primary">Enlace 1</a>
+            <a href="ejemplo.html" class="btn btn-danger">Enlace 2</a>
         </div>
     </div>
     </div>
