--- a/formulario.html
+++ b/formulario.html
@@ -13,13 +13,13 @@
 
 <body>
     <h1>Formulario</h1>
-    <form action="">
+    <form action="javascript.html" method="GET">
         <div class="row">
-            <div class="col">Nombre:    <input type="text"></div>
-            <div class="col">Dirección: <input type="text"></div>
-            <div class="col">Teléfono:  <input type="text"></div>
+            <div class="col-12"><label form="nom" class="">Nombre:</label>   <input name="nom" id="nom" type="text"class="form-control" placeholder="Escribe tu nombre"></div>
+            <div class="col-8"><label form="dic" class="">Dirección:</label> <input name="dic" id="dic" type="text"class="form-control"></div>
+            <div class="col-6"><label form="tel" class="">Teléfono:</label>  <input name="dic" id="tel" type="password"class="form-control"></div>
             <input type="submit" value="Enviar">
-            <a href="" class="btn btn-danger">Enviar</a>
+            <a href="ejemplo2.html" class="btn btn-danger">Enviar</a>
         </div>
     </form>
 
