--- a/formulario.html
+++ b/formulario.html
@@ -13,13 +13,19 @@
 
 <body>
     <h1>Formulario</h1>
+    <!-- Se hace uso del los metodos GET y POST para enviar informacion del formulario -->
+    <!-- Action establece quien va a procesar la peticion de datos -->
     <form action="javascript.html" method="GET">
-        <div class="row">
-            <div class="col-12"><label form="nom" class="">Nombre:</label>   <input name="nom" id="nom" type="text"class="form-control" placeholder="Escribe tu nombre"></div>
-            <div class="col-8"><label form="dic" class="">Dirección:</label> <input name="dic" id="dic" type="text"class="form-control"></div>
-            <div class="col-6"><label form="tel" class="">Teléfono:</label>  <input name="dic" id="tel" type="password"class="form-control"></div>
-            <input type="submit" value="Enviar">
-            <a href="ejemplo2.html" class="btn btn-danger">Enviar</a>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12"><label form="nom" class="">Nombre:</label>   <input name="nom" id="nom" type="text"class="form-control" placeholder="Escribe tu nombre"></div>
+                <div class="col-6"><label form="dic" class="">Dirección:</label> <input name="dic" id="dic" type="text"class="form-control"></div>
+                <div class="col-6"><label form="tel" class="">Teléfono:</label>  <input name="dic" id="tel" type="password"class="form-control"></div>
+                <!-- El uso del imput de tipo submit realiza el envio de los datos del formulario a donde apunte el action -->
+                <input type="submit" value="Enviar">
+                <!-- Solo realiza el cambio de pagina pero no realiza el envio de los datos -->
+                <a href="ejemplo2.html" class="btn btn-danger">Enviar</a>
+            </div>
         </div>
     </form>
 
