--- a/formulario2.html
+++ b/formulario2.html
@@ -7,7 +7,6 @@
     <title>Formulario 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
 </head>
 <body>
     <div class="container">
@@ -26,14 +25,14 @@
               <label class="form-check-label" for="exampleCheck1">Recuerdame</label>
             </div>
             <!-- No se genera un envio ni queryString si el tipo es "button"-->
-            <button type="button" class="btn btn-primary" id="btnEnviar()">Enviar</button>
+            <button type="button" class="btn btn-primary" id="btnEnviar">Enviar</button>
             <!-- Se genera un envio y queryString-->
             <button class="btn btn-danger"onclick="window.alert('Enviar2')">Enviar2</button>
             <!-- Se genera un envio y no queryString-->
             <a href="" class="btn btn-danger"onclick="window.alert('Enviar3')">Enviar3</a>
             <!-- No se genera un envio ni queryString-->
             <a class="btn btn-primary" onclick="boton4()">Enviar4</a>
-            <a class="btn btn-primary" id="btnEnviar5()">Enviar5</button>
+            <a class="btn btn-primary" id="btnEnviar5">Enviar 5</a>
           </form>
     </div>
 </body>
