--- a/Tareas/Calculadora/calculadora.html
+++ b/Tareas/Calculadora/calculadora.html
@@ -19,11 +19,11 @@
             </div>
             <button class="col-2" onclick="display.borrarTodo()">C</button>
             <button onclick="display.borrar()">&larr;</button>
-            <button class="operador" value="dividir">%</button>
+            <button class="operador" value="dividir">/</button>
             <button class="numero">7</button>
             <button class="numero">8</button>
             <button class="numero">9</button>
-            <button class="operador" value="multiplicar">X</button>
+            <button class="operador" value="multiplicar">x</button>
             <button class="numero">4</button>
             <button class="numero">5</button>
             <button class="numero">6</button>
