--- a/Tareas/Tarea 2/UsersReg.html
+++ b/Tareas/Tarea 2/UsersReg.html
@@ -15,28 +15,28 @@
         <tr>
             <td>Nombre</td>
             <td>Correo</td>
-            <td>DNI</td>
+            <td>ID</td>
             <td>Edad</td>
         </tr>
 
         <tr>
-            <td>Juan</td>
-            <td>juan@outlook.com</td>
-            <td>8394713461</td>
-            <td>29</td>
+            <td>Jose</td>
+            <td>jose@you.com</td>
+            <td>84857</td>
+            <td>25</td>
         </tr>
 
         <tr>
-            <td>Flor</td>
-            <td>flor@gmail.com</td>
-            <td>8374514263</td>
-            <td>20</td>
+            <td>Maria</td>
+            <td>mari@git.com</td>
+            <td>56774/td>
+            <td>30</td>
         </tr>
 
         <tr>
-            <td>David</td>
-            <td>david@hotmal.com</td>
-            <td>7483940189</td>
+            <td>Carlos</td>
+            <td>carlv@gmail.com</td>
+            <td>56767</td>
             <td>41</td>
         </tr>
     </table>
