--- a/Tareas/Calculadora/calculadora.html
+++ b/Tareas/Calculadora/calculadora.html
@@ -11,7 +11,7 @@
     <script src="index.js" type="text/javascript" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container"></div>
         <div class="calculadora">
             <div class="display">
                 <div id="valor-anterior"></div>
